# stla.cockpit.vera.mode-management-services

./: .gitignore  CMakeLists.txt  README.md  build-sdkapps.sh  build.sh  config.json  cpptest.settings  manifest.toml  unity-vera-build.sh
common/api/: CMakeLists.txt
common/api/apmf/iface/com/stellantis/projectionIface/: androidAuto.idl  carplay.idl
common/ipc/: CMakeLists.txt  ModeManagerService.acs
include/: ModeManagerService.h  ModeManagerServiceApp.h  Utility.h
src/: App.cpp  ModeManagerService.cpp  ModeManagerServiceApp.cpp  Utility.cpp
tests/userdefined/: TestSuite_ModeManagerService_cpp.cpp
